# Agentic-AI

./: .gitignore  pyproject.toml
Agno/: conv_history.py  function_tool.py  local_storage.py  multi_agent.py  session_summary.py  simple_agent.py  simple_agent_openai.py  storage.py
Agno/tmp/: data.db
Agno/toolkit/: main_toolkit.py  math_toolkit.py
AutoGen/: AutoGen_agentchat.ipynb  AutoGen_agentchat_multimodal.ipynb  AutoGen_core.ipynb  AutoGen_core_distributed.ipynb
AutoGen/sandbox/: flights.md
CrewAI/coder/: pyproject.toml
CrewAI/coder/output/: code_and_output.txt
CrewAI/debate/: pyproject.toml
CrewAI/debate/output/: decide.md  propose.md
CrewAI/engineering_team/: pyproject.toml
CrewAI/engineering_team/output/: accounts.py  accounts.py_design.md  app.py
CrewAI/financial_researcher/: pyproject.toml
CrewAI/stock_picker/: pyproject.toml
CrewAI/stock_picker/memory/: chroma.sqlite3  (+1 more)
FullStackAgenticAI/01_Tokenization/: main.py
FullStackAgenticAI/02_HelloWorld/: gemini_hello.py  gemini_openai.py
FullStackAgenticAI/03_PromptEngg/: chain_of_thought.py  few_shot.py  persona.py  zero_shot.py
FullStackAgenticAI/04_WeatherAgent/: agent.py  main.py
FullStackAgenticAI/todo_app/: index.html  script.js  style.css
LangGraph/: LG_LLM_chatbot.ipynb  LG_state_object.ipynb  LangGraph_PlayWright.ipynb  LangSmith_lab.ipynb  LangSmith_tools.ipynb  Structured_output_types.ipynb  memory.db-shm  memory.db-wal  react_agent_basic.py
LangGraph/React_Agent/: agent_reason_runnable.py  react_graph.py  react_state.py
LangGraph/Reflection_system/: chains.py
LangGraph/Reflexion_system/: chains.py  execute_tools.py
LangGraph/State/: basic_state.py  complex_state_annotate.py  complex_state_manual.py
MCP/: MCP_custom_server.ipynb  MCP_local_server.ipynb  MCP_tool_exploration.ipynb  accounts.db
MCP/sandbox/: banoffee.md
Notebooks/Agent_Foundation/: chat_with_linkedln.ipynb  groq_api_calls.ipynb  llm_evaluator.ipynb  marketing_advertising_agent.ipynb
Notebooks/OpenAI SDK/: email_agent.ipynb  openai_agent_groq.ipynb
Projects/Agent_Creator/: agent.py  agent1.py  agent2.py  agent3.py  agent4.py  agent5.py  creator.py
Projects/Deep_Research/: email_agent.py  planner_agent.py  search_agent.py  writer_agent.py
Projects/Marketing_avd_agent/: app.py  app_v1.py  test.py
Pydantic/: basics.py  field_validator.py
tmp/: data.db
(+15 files in other folders)
