[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.31.0",
    "groq>=0.25.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.25",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.8",
    "markdown>=3.8",
    "openai>=1.82.0",
    "openai-agents>=0.0.16",
    "pdfkit>=1.0.0",
    "pydantic>=2.11.5",
    "resend>=2.10.0",
    "streamlit>=1.45.1",
]
