[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.1",
    "autogen-ext>=0.6.1",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "gradio>=5.31.0",
    "groq>=0.25.0",
    "grpcio-tools>=1.71.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.25",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "markdown>=3.8",
    "openai>=1.82.0",
    "openai-agents>=0.0.16",
    "pdfkit>=1.0.0",
    "playwright>=1.52.0",
    "polygon-api-client>=1.14.6",
    "pydantic>=2.11.5",
    "resend>=2.10.0",
    "smithery>=0.1.0",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
]
